--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,7 +9,7 @@ spring.datasource.password=Pgsd1357
 #spring.jpa.show-sql=true
 #spring.jpa.hibernate.ddl-auto=update
 
-#server.port=9191
+server.port=9191
 
 #QUARTZ CONFIGS
 spring.quartz.job-store-type=jdbc
